Used css and html validator to seek and fix errors within the code and fixed a bug with the main title not showing.

--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -1,9 +1,9 @@
 /* 
 Lato font for titles 
 News Cycle for rest of text
+*/
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=News+Cycle:wght@400;700&family=Oswald:wght@200..700&family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap');
 
- */
 * {
     padding: 0;
     margin: 0;
@@ -50,7 +50,6 @@ header a {
 }
 
 main {
-    padding: 0 1 auto;
     padding-top: 3vh;
     flex: 1;
 }
@@ -61,7 +60,7 @@ img {
 }
 
 p {
-    font-family: "News Cycle," sans-serif;
+    font-family: "News Cycle", sans-serif;
 }
 video{
     width: 50%;
@@ -79,7 +78,12 @@ button {
 }
 
 /* IDs*/
-
+#main-title{
+    padding-top: 3rem;
+    font-size: 500%;
+    font-family: "Lato", sans-serif;
+    color: rgb(255, 255, 255);
+}
 #slogan {
     font-size: 200%;
     color: rgb(255, 255, 255);
@@ -95,8 +99,8 @@ button {
 
 
 /* CLASSES */
-main-title{
-    padding-top: 2%;
+.main-title{
+    padding-top: 6rem;
     font-size: 500%;
     font-family: "Lato", sans-serif;
     color: rgb(255, 255, 255);
